src/tests/fixtures/input_types/InputTypeWithDeprecatedRequiredField.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  hello: string;
}

/** @gqlInput */
type MyInputType = {
  /** Sweet field!
   * @deprecated Sweet, but stale
   */
  someField: string;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_types/InputTypeWithDeprecatedRequiredField.invalid.ts:10:7 - error: Required input field MyInputType.someField cannot be deprecated.

10    * @deprecated Sweet, but stale
         ~~~~~~~~~~

  src/tests/fixtures/input_types/InputTypeWithDeprecatedRequiredField.invalid.ts:12:14
    12   someField: string;
                    ~~~~~~
    Related location
